GS-3742 Community login page redesign - fix wrong sizes/colors on h3's

--- a/src/webapp/res/css/community/registration/loginOrRegister.css
+++ b/src/webapp/res/css/community/registration/loginOrRegister.css
@@ -39,12 +39,13 @@
 }
 
 #newuser h3 {
+    font-weight: bold;
     padding: 16px 0 0 0;
+    font-size: 18px;
 }
 
 #newuser h3 a {
-    color: #777777;
-    font-size: 18px;
+    color: #666666;
 }
 
 #joinImage {
@@ -77,7 +78,7 @@
 
 #returninguser h3 {
     padding: 16px 0 0 0;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
     color: #666666;
 }
